
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".CreatePosterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/tvLostDog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:paddingBottom="16dp"
            />

        <EditText
            android:id="@+id/etDogsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:gravity="start"
            android:text=""
            android:hint="@string/dogs_name"
            android:textStyle="bold"
            android:paddingBottom="@dimen/activity_vertical_margin"
            />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:text=""
            android:hint="@string/description"
            android:paddingTop="@dimen/activity_vertical_margin"
            />

        <EditText
            android:id="@+id/etMicrochip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:text=""
            android:hint="@string/microchip"
            android:paddingTop="@dimen/activity_vertical_margin"
            />

        <EditText
            android:id="@+id/etOwnerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:text=""
            android:hint="@string/ownerInfo"
            android:paddingTop="@dimen/activity_vertical_margin"
            />

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="32dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="bottom|center">

        <Button android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_button_green"
            android:layout_marginBottom="5dp"
            android:text="@string/submit"
            android:textStyle="bold"
            android:onClick="doClick"
            />

    </LinearLayout>
    </LinearLayout>

</ScrollView>